routing and creating a new Rating functionality

--- a/frontend/src/app/header/header/header.component.html
+++ b/frontend/src/app/header/header/header.component.html
@@ -2,7 +2,7 @@
   <h1>Beer-Blog <small></small></h1>
 </div>
 <ul class="nav nav-pills">
-  <li role="presentation" class="active"><a href="#">Übersicht</a></li>
-  <li role="presentation"><a href="#">Bewertung erstellen</a></li>
-  <li role="presentation"><a href="#">Profil</a></li>
+  <li role="presentation"><a routerLink="Overview">Übersicht</a></li>
+  <li role="presentation"><a routerLink="add-rating">Bewertung erstellen</a></li>
+  <li role="presentation"><a href="">Profil</a></li>
 </ul>
