--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,6 @@
 <!--The whole content below can be removed with the new code.-->
 <app-header></app-header>
 <app-beer></app-beer>
+<router-outlet></router-outlet>
 
 
