--- a/frontend/frontend/src/app/content/beer/beer.component.html
+++ b/frontend/frontend/src/app/content/beer/beer.component.html
@@ -8,7 +8,7 @@
         <p>Preis: {{beer.price}}€</p>
         <p>Größe: {{beer.litre}}L</p>
         <p>{{beer.description}}</p>
-        <ngb-rating [(rate)]="beer.rating"></ngb-rating>
+        <p>Bewertung: {{beer.rating}}</p>
       </div>
     </div>
   </div>
