--- a/frontend/src/app/header/header/header.component.html
+++ b/frontend/src/app/header/header/header.component.html
@@ -2,7 +2,7 @@
   <h1>Beer-Blog <small></small></h1>
 </div>
 <ul class="nav nav-pills">
-  <li role="presentation"><a routerLink="Overview">Übersicht</a></li>
-  <li role="presentation"><a routerLink="add-rating">Bewertung erstellen</a></li>
-  <li role="presentation"><a href="">Profil</a></li>
+  <li role="presentation"><a routerLink="Overview"  routerLinkActive="active">Übersicht</a></li>
+  <li role="presentation"><a routerLink="add-rating"  routerLinkActive="active">Bewertung erstellen</a></li>
+  <li role="presentation"><a routerLink=""  routerLinkActive="active">Profil</a></li>
 </ul>
