--- a/frontend/src/app/header/header/header.component.html
+++ b/frontend/src/app/header/header/header.component.html
@@ -1,8 +1,7 @@
-<div class="page-header">
-  <h1>Beer-Blog <small></small></h1>
-</div>
+<div class="container-fluid">
 <ul class="nav nav-pills">
   <li role="presentation"><a routerLink="Overview"  routerLinkActive="active">Übersicht</a></li>
   <li role="presentation"><a routerLink="add-rating"  routerLinkActive="active">Bewertung erstellen</a></li>
-  <li role="presentation"><a routerLink=""  routerLinkActive="active">Profil</a></li>
+  <li role="presentation"><a routerLink="profil"  routerLinkActive="active">Profil</a></li>
 </ul>
+</div>
